PaperMod: Fix highlighted inline code contrast in dark mode

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -9,9 +9,15 @@
   --link-hover-underline-color: #58a6ff;
 }
 
+/* Make highligths higher */
 mark {
   padding-bottom: .5em;
   padding-top: .5em;
+}
+
+/* Fix highlighted inline code contrast in dark mode */
+.dark mark code {
+  color: var(--primary);
 }
 
 /* Main profile */
